server: create schedule update and getbyid
