# server/src/controllers/SchedulesController.js
@@ -40,6 +40,37 @@ class SchedulesController {
       console.log(error);
     }
   }
+
+  static async updateSchedule(req, res, next) {
+    const params = req.params;
+    const id = Number(params.id);
+    const newSchedule = req.body;
+
+    try {
+      const schedule = await prisma.schedules.findUnique({ where: { id } });
+      if (!schedule) return res.status(404).json({ message: "schedule not found" });
+      await prisma.schedules.update({
+        where: { id },
+        data: { newSchedule },
+      });
+      return res.status(200).json({ message: "schedule updated" });
+    } catch (error) {
+      console.log(error);
+    }
+  }
+
+  static async getScheduleById(req, res, next) {
+    const params = req.params;
+    const id = Number(params.id);
+
+    try {
+      const scheduleById = await prisma.schedules.findUnique({ where: { id } });
+      if (!scheduleById) return res.status(404).json({ message: "schedule not found" });
+      return res.status(200).json(scheduleById);
+    } catch (error) {
+      console.log(error);
+    }
+  }
 }
 
 // implementar a lógica para verificar a disponibilidade de horários antes de
